# field-classification

./: .gitignore  README.md  analyze_errors.py  config.yaml  main.py  pyproject.toml  run_all_models.py  run_cnn_models.py
src/: __init__.py  classification.py  clip_extraction.py  cnn_trainer.py  config.py  dataset.py  evaluation.py  feature_extraction.py  logging_config.py  remote_clip_extraction.py  siglip2_extraction.py  vision_encoder_extraction.py
